// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Check Active Color 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-check size-sm"
  >
    <input
      aria-label="check"
      checked={true}
      className="input-check color-primary size-sm"
      id="true:primary"
      tabIndex={0}
      type="checkbox"
    />
    <div
      className="icon-check"
    >
      <div
        className="container color-primary size-sm"
      >
        <svg
          fill="none"
          height="100%"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 13l4 4L19 7"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={1}
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="container-check size-sm"
  >
    <input
      aria-label="check"
      checked={true}
      className="input-check color-secondary size-sm"
      id="true:secondary"
      tabIndex={0}
      type="checkbox"
    />
    <div
      className="icon-check"
    >
      <div
        className="container color-primary size-sm"
      >
        <svg
          fill="none"
          height="100%"
          stroke="currentColor"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 13l4 4L19 7"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={1}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Atoms/Check Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-check size-sm"
  >
    <input
      aria-label="check"
      className="input-check color-primary size-sm"
      id="check#"
      tabIndex={0}
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Storyshots Atoms/Check Inactive Color 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <div
    className="container-check size-sm"
  >
    <input
      aria-label="check"
      checked={false}
      className="input-check color-primary size-sm"
      id="false:primary"
      tabIndex={0}
      type="checkbox"
    />
  </div>
  <div
    className="container-check size-sm"
  >
    <input
      aria-label="check"
      checked={false}
      className="input-check color-secondary size-sm"
      id="false:secondary"
      tabIndex={0}
      type="checkbox"
    />
  </div>
</div>
`;
